coverage_export collection added
