# documentation/openAPI.yaml
@@ -384,6 +384,32 @@ paths:
           schema :
             $ref: '#/definitions/error_404'
 
+  /coverages/{coverage_id}/exports:
+    get:
+      summary: Display coverage exports
+      tags:
+        - coverages
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: coverage_id
+          type: string
+          description: Identifier of the coverage
+          required: true
+      responses:
+        200:
+          description: Requested coverage exports
+          schema:
+            $ref: '#/definitions/export_list'
+        400:
+          description: Invalid arguments
+          schema :
+            $ref: '#/definitions/error_400'
+        404:
+          description: Resource not found
+          schema :
+            $ref: '#/definitions/error_404'
 
   /contributors:
     get:
@@ -955,6 +981,29 @@ definitions:
         type: object
         example: {bano_data: {key: data_sources_id, value: bano_75}}
 
+  export_list:
+    type: object
+    properties:
+      exports:
+        type: array
+        items:
+          $ref: "#/definitions/export"
+
+  export:
+    type: object
+    properties:
+      id:
+        type: string
+        example: 1234
+      coverage_id:
+        type: string
+        example: fr-idf
+      contributors:
+        type: object
+        example: [contributor_stif, contributor_pdl]
+      gridfs_id:
+        type: string
+        example: 12345
 
   data_source_obj:
     type: object
